Grease pencil doesn't work in Quad View #29029

Closed
opened 2011-10-25 21:56:55 +02:00 by Pep · 8 comments

%%%Open new file; toggle quad view. Click on Draw on the Tool Shelf; you can draw perfectly well on Front Ortho quadrant, but on any of the other three it just makes weird things.

Regards.

Pep.

(Fedora 14 + Blender 2.60a)
%%%

%%%Open new file; toggle quad view. Click on Draw on the Tool Shelf; you can draw perfectly well on Front Ortho quadrant, but on any of the other three it just makes weird things. Regards. Pep. (Fedora 14 + Blender 2.60a) %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%Two observations: it works with the hotkeys (D, etc.); it's just the Tool Shelf buttons that don't work: it acts like if it was drawing onto the Front Ortho view, at the spot that would be under the other sub-views. (Tried in Windows also, same effect).

P.
%%%

%%%Two observations: it works with the hotkeys (D, etc.); it's just the Tool Shelf buttons that don't work: it acts like if it was drawing onto the Front Ortho view, at the spot that would be under the other sub-views. (Tried in Windows also, same effect). P. %%%

%%%Assigning to self for investigation, but not sure it'll be possible to solve this problem easily due to some design things.%%%

%%%Assigning to self for investigation, but not sure it'll be possible to solve this problem easily due to some design things.%%%

%%%Checked code. Modal operators are supposed to have frozen screen context, that's why it fails to work properly when executed form toolbox.
Due to it's not actually critical issue, moving it to todo (http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Tools#Grease_Pencil)

Thanks for the report, closing.%%%

%%%Checked code. Modal operators are supposed to have frozen screen context, that's why it fails to work properly when executed form toolbox. Due to it's not actually critical issue, moving it to todo (http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Tools#Grease_Pencil) Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

This issue was referenced by 4e1c27f646

This issue was referenced by 4e1c27f646493931d4c45f348160cd0bc92ce680

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'

Closed by commit 4e1c27f646.

Closed by commit 4e1c27f646.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29029
No description provided.