Fix T29029: Grease pencil fails in Quad View